# magic-folder

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  DEVELOPERS  MANIFEST.in  Makefile  NEWS.rst  NOTES  NOTES.rst  README.rst  flake.nix  gridsync-requirements.md  p  pyproject.toml  pytest.ini  setup.cfg  setup.py  shell.nix  towncrier.pyproject.toml  towncrier.toml  tox.ini  vendoring.pyproject.toml
.circleci/: Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.pypy  Dockerfile.ubuntu  config.yml  create-virtualenv.sh  populate-wheelhouse.sh  run-tests.sh  secret-env-cipher  setup-virtualenv.sh
docs/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  Makefile  api.rst  backdoors.rst  conf.py  config.rst  configuration.rst  conflicts.rst  datamodel.rst  development.rst  downloader.rst  index.rst  interface.rst  invite-diagram-readonly.seqdiag  invite-diagram.seqdiag  invites.rst  leif-design.rst  limitations.rst  magic-folder-howto.rst  magic-folder.rst  release-process.rst  releases.rst  snapshots.rst  usage.rst
integration/: README  conftest.py  helpers.py  make_small_files.py  test_add.py  test_general_cli.py  test_invite.py  test_kitties.py  test_list.py  test_magic_folder.py  test_multiuser.py  test_performance.py  test_resolve_conflict.py  test_same_files.py  test_sizes.py  test_status.py  test_synchronize.py  test_tahoe_objects.py  test_util.py  util.py
newsfragments/: 105.feature  109.feature  120.feature  138.feature  139.bugfix  139.feature  140.feature  141.bugfix  142.other  145.bugfix  148.bugfix  (+88 more)
(+197 files in other folders)
