[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
write_to = "src/magic_folder/_version.py"

[tool.towncrier]
    package_dir = "src"
    package = "magic_folder"
    filename = "NEWS.rst"
    directory = "newsfragments"
    start_string = ".. towncrier start line"
    issue_format = "`#{issue} <https://github.com/LeastAuthority/magic-folder/issues/{issue}>`_"
    underlines = [
        "'",
        "-",
        "~",
    ]

    [[tool.towncrier.type]]
        directory = "incompat"
        name = "Backwards Incompatible Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug Fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "installation"
        name = "Dependency/Installation Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "configuration"
        name = "Configuration Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removed"
        name = "Removed Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "other"
        name = "Other Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "minor"
        name = "Misc/Other"
        showcontent = false
